syntax = "proto3";

package drivers;

import "micro-drive/services/accounts/proto/accounts.proto";

service Drivers {
  rpc GetFreeDriver(GetFreeDriverRequest) returns (GetFreeDriverResponse);
  rpc ReleaseDriver(ReleaseDriverRequest) returns (ReleaseDriverResponse);
}

message GetFreeDriverRequest {}

message GetFreeDriverResponse {
  accounts.Driver driver = 1;
}

message ReleaseDriverRequest {
  string driverId = 1;
}

message ReleaseDriverResponse {}
